fixed error in class names and aligned shapes correctly

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -204,7 +204,6 @@ filter:blur(35px);
   width: 100px;
   height: 100px;
   transform: translate3d(0px,300px, 0);
-  border: 1px dashed white;
   clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
 }
 
@@ -265,21 +264,31 @@ filter:blur(35px);
       right: -82px;
   }
 
-     .shape-1 {
-      opacity: 0.9;
-      border: 2px dashed white;
-      background-color: #CDCDBC;
+     .shape1 {
+      height: 85px;
+      width: 85px;
+      background-color: white;
+      opacity: .4;
+      border-radius: 50%;
       position: absolute;
-      width: 100px;
-      height: 120px;
-      transform: translate3d(1095px, 126px, 0);
-      border: 1px solid white;
-      -webkit-clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
-      clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+      transform: translate3d(-154px,-64px, 0);
         }
 
-       .shape-2 {
-        opacity: 0.9;
+       .shape2 {
+        opacity: 0.3;
+        border: 2px dashed white;
+        background-color: #CDCDBC;
+        position: absolute;
+        width: 100px;
+        height: 120px;
+        transform: translate3d(1095px, 126px, 0);
+        border: 1px solid white;
+        -webkit-clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+        clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+      }
+
+    .shape3 {
+        opacity: 0.6;
         border: 2px dashed white;
         background-color: #CDCDBC;
         position: absolute;
@@ -290,16 +299,6 @@ filter:blur(35px);
         -webkit-clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
         clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
       }
-
-    .shape-3 {
-      height: 85px;
-      width: 85px;
-      background-color: beige;
-      border-radius: 50%;
-      position: absolute;
-      top: 200px;
-      left: 455px;
-      }
   }
 
   @media screen and (max-width: 992px) {
@@ -307,28 +306,12 @@ filter:blur(35px);
 
     }
 
-    /* @media only screen and (min-width: 768px) { */
-      /* For desktop: */
-      /* .col-1 {width: 8.33%;}
-      .col-2 {width: 16.66%;}
-      .col-3 {width: 25%;}
-      .col-4 {width: 33.33%;}
-      .col-5 {width: 41.66%;}
-      .col-6 {width: 50%;}
-      .col-7 {width: 58.33%;}
-      .col-8 {width: 66.66%;}
-      .col-9 {width: 75%;}
-      .col-10 {width: 83.33%;}
-      .col-11 {width: 91.66%;}
-      .col-12 {width: 100%;}
-    } */
-
 
   @media screen and (max-width: 768px) {
     
   }
 
-  @media screen and (max-width: 600px){
+  @media screen and (max-width: 500px){
     
     header{
       color: white;
@@ -388,6 +371,111 @@ filter:blur(35px);
       background-color: red;
     }
 
+    #home .info-section {
+      width: 50%;
+      padding: 0 10px;
+    }
+
+    #home .info-section h1 {
+      font-size: 2rem;
+      font-weight: 900;
+      color: white;
+      margin-bottom: 2rem;
+  }
+  
+  #home .info-section h4 {
+    font-size: .9rem;
+    font-weight: 300;
+    color: white;
+    margin-bottom: 2rem;
+    letter-spacing: 2px;
+  }
+  
+  #home .info-section .call-actions{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
+  .action-btn, .action-ghost-btn{
+    padding: 20px 20px;
+    border-radius: 30px;
+    width: 86px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: white;
+    font-weight: 500;
+    font-size: .8rem;
+  }
+  
+  #home .photos .girl{
+    position: absolute;
+    width: 100px;
+    height: 200px;
+    z-index: 1;
+    transform: translate3d(69px, -80px, 0);
+    object-fit: cover;
+    object-position: top;
+    transition: filter .4s ease-in-out;
+    cursor: pointer;
+  }
+  #home .photos .girl:hover{
+  filter:blur(35px);
+  }
+  
+  #home .photos .marketing{
+    position: absolute;
+    width: 100px;
+    height: 200px;
+    z-index: 2;
+    transform: translate3d(333px, 50px, 0);
+    object-fit: cover;
+    object-position: top;
+    transition: filter .4s ease-in-out;
+    cursor: pointer;
+  }
+  #home .photos .marketing:hover{
+  filter:blur(35px);
+  }
+  
+  .shape1 {
+      height: 85px;
+      width: 85px;
+      background-color: white;
+      opacity: .4;
+      border-radius: 50%;
+      position: absolute;
+      transform: translate3d(-154px,-13px, 0);
+      }
+  
+     .shape2 {
+      opacity: 0.3;
+      border: 2px dashed white;
+      background-color: #CDCDBC;
+      position: absolute;
+      width: 100px;
+      height: 120px;
+      transform: translate3d(1095px, 126px, 0);
+      border: 1px solid white;
+      -webkit-clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+      clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+    }
+  
+  .shape3 {
+      opacity: 0.6;
+      border: 2px dashed white;
+      background-color: #CDCDBC;
+      position: absolute;
+      width: 100px;
+      height: 81px;
+      transform: translate3d(-241px, 342px, 0);
+      border: 1px solid white;
+      -webkit-clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+      clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+    }
+  
+
   }
 
 
@@ -433,7 +521,7 @@ filter:blur(35px);
 
   #navbar{
     display:none;
-    padding: 10px 0;
+    padding: 20px 0;
   }
   
   .ham-container {
@@ -535,8 +623,18 @@ filter:blur(35px);
 filter:blur(35px);
 }
 
-.shape-1 {
-  opacity: 0.9;
+.shape1 {
+  height: 85px;
+  width: 85px;
+  background-color: white;
+  opacity: .4;
+  border-radius: 50%;
+  position: absolute;
+  transform: translate3d(-154px,-28px, 0);
+  }
+
+ .shape2 {
+  opacity: 0.3;
   border: 2px dashed white;
   background-color: #CDCDBC;
   position: absolute;
@@ -546,29 +644,19 @@ filter:blur(35px);
   border: 1px solid white;
   -webkit-clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
   clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
-    }
+}
 
-   .shape-2 {
-    opacity: 0.9;
-    border: 2px dashed white;
-    background-color: #CDCDBC;
-    position: absolute;
-    width: 100px;
-    height: 120px;
-    transform: translate3d(637px, 682px, 0);
-    border: 1px solid white;
-    -webkit-clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
-    clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
-  }
-
-.shape-3 {
-  height: 85px;
-  width: 85px;
-  background-color: beige;
-  border-radius: 50%;
+.shape3 {
+  opacity: 0.6;
+  border: 2px dashed white;
+  background-color: #CDCDBC;
   position: absolute;
-  top: 200px;
-  left: 455px;
-  }
+  width: 90px;
+  height: 73px;
+  transform: translate3d(-186px, 352px, 0);
+  border: 1px solid white;
+  -webkit-clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+  clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+}
 
 }
